dataset1235/2025-2/2868285114/users/1746929503/executions/3792430146_3974737893.log
== SUBMISSION (2025-09-02 23:12:40)
-- CODE: 
x = int(input())
y = int(input())

if (x%y==0):
  print(x//y)
  print(sim)
else: 
  print(x//y)
  print("nao")

-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
          ^^^
NameError: name 'sim' is not defined. Did you mean: 'sum'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
          ^^^
NameError: name 'sim' is not defined. Did you mean: 'sum'?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
          ^^^
NameError: name 'sim' is not defined. Did you mean: 'sum'?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:10:47)
-- CODE: 
x = (int(input))
y = (int(input))

if (x%y==0):
  print(x//y)
  print(sim)
else: 
  print(x//y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = (int(input))
         ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = (int(input))
         ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = (int(input))
         ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = (int(input))
         ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = (int(input))
         ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = (int(input))
         ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 03:10:47)
-- CODE: 
x = int(input())
y = int(input())

##quando temos x%y==0 o resto da divisão eh igual a 0 (div inteira)

if (x%y==0):
  print(x//y)
  print("sim")
  
else:
  print(x%y)
  print("nao")

  #
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:11:21)
-- CODE: 
x = int((input))
y = int((input))

if (x%y==0):
  print(x//y)
  print(sim)
else: 
  print(x//y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int((input))
        ^^^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int((input))
        ^^^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int((input))
        ^^^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int((input))
        ^^^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int((input))
        ^^^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int((input))
        ^^^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:22:33)
-- CODE: 
x = int(input())
y = int(input())

if (X_for_divisível_por_Y):
  print(x//y)
  print("sim")
  
else:
  print(x%y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X_for_divisível_por_Y):
        ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'X_for_divisível_por_Y' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X_for_divisível_por_Y):
        ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'X_for_divisível_por_Y' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X_for_divisível_por_Y):
        ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'X_for_divisível_por_Y' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X_for_divisível_por_Y):
        ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'X_for_divisível_por_Y' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X_for_divisível_por_Y):
        ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'X_for_divisível_por_Y' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (X_for_divisível_por_Y):
        ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'X_for_divisível_por_Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:17:41)
-- CODE: 
x = int(input())
y = int(input())

if (x//y):
  print(x//y)
  print("sim")
  
else: 
  print(x%y)
  print("nao")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:13:11)
-- CODE: 
x = int(input())
y = int(input())

if (x%y==0):
  print(x//y)
  print(sim)
  
else: 
  print(x//y)
  print("nao")

-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
          ^^^
NameError: name 'sim' is not defined. Did you mean: 'sum'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
          ^^^
NameError: name 'sim' is not defined. Did you mean: 'sum'?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
          ^^^
NameError: name 'sim' is not defined. Did you mean: 'sum'?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:21:01)
-- CODE: 
x = int(input())
y = int(input())

if (xfordivivelpory):
  print(x//y)
  print("sim")
  
else (x%y):
  print(x%y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:16:30)
-- CODE: 
x = int(input())
y = int(input())

if (x//y):
  print(x//y)
  print("sim")
  
else: 
  print(x%y==0)
  print("nao")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:18:36)
-- CODE: 
x = int(input())
y = int(input())

if (x//y):
  print(x//y)
  print("sim")
  
else (x%y):
  print(x%y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:21:00)
-- CODE: 
x = int(input())
y = int(input())

if (xfordivivelpory):
  print(x//y)
  print("sim")
  
else (x%y):
  print(x%y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 8
    else (x%y):
         ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:18:24)
-- CODE: 
x = int(input())
y = int(input())

if (x//y):
  print(x//y)
  print("sim")
  
else (x%y)
  print(x%y)
  print("nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 8
    else (x%y)
         ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 8
    else (x%y)
         ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 8
    else (x%y)
         ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 8
    else (x%y)
         ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 8
    else (x%y)
         ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 8
    else (x%y)
         ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
